fixed overflow of index header

--- a/css/hero.css
+++ b/css/hero.css
@@ -39,7 +39,6 @@ nav {
 	background-color: var(--color-btn);
 	padding: 0.75em 2.25em;
 	font-size: 1.2em;
-	right: 10%;
 	bottom: 25%;
 	border-radius: 0.75em;
 	color: var(--color-ctatext);
@@ -76,8 +75,10 @@ nav {
 @media only screen and (max-width: 510px) {
 	.slogan__hero {
 		max-width: 18ch;
-		margin: 0;
-		left: 0;
+	}
+	.btn__cta-hero {
+		right: 10%;
+
 	}
 }
 
